--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;600;800;900&display=swap" rel="stylesheet">
     <title>Sebastian Gomez Portfolio</title>
   </head>
   <body>
