--- a/work.html
+++ b/work.html
@@ -1,97 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+      crossorigin="anonymous"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-    crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css" />
+    <title>View My Work</title>
+  </head>
 
-  <link rel="stylesheet" href="css/main.css">
-  <title>View My Work</title>
-</head>
-
-<body>
-  <header>
-    <div class="menu-btn">
-      <div class="btn-line"></div>
-      <div class="btn-line"></div>
-      <div class="btn-line"></div>
-    </div>
-
-    <nav class="menu">
-      <div class="menu-branding">
-        <div class="portrait"></div>
+  <body>
+    <header>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
       </div>
-      <ul class="menu-nav">
-        <li class="nav-item">
-          <a href="index.html" class="nav-link">
-            Home
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="about.html" class="nav-link">
-            About Me
-          </a>
-        </li>
-        <li class="nav-item current">
-          <a href="work.html" class="nav-link">
-            My Work
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="contact.html" class="nav-link">
-            How To Reach Me
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
 
-  <main id="work">
-    <h1 class="lg-heading">
-      My
-      <span class="text-secondary">Work</span>
-    </h1>
-    <h2 class="sm-heading">
-      Check out some of my projects...
-    </h2>
-    <div class="projects">
-      <div class="work-item-1">
-        <a href="https://sebastiangomezzz.github.io/flat-eathling-nightmare/">
-          <img src="img/projects/project1.png" alt="Project">
-        </a>
-        <a href="https://sebastiangomezzz.github.io/flat-eathling-nightmare/" class="btn-light">
-          <i class="fas fa-eye"></i> Project
-        </a>
-        <a href="https://github.com/Sebastiangomezzz/flat-eathling-nightmare" class="btn-dark">
-          <i class="fab fa-github"></i> Github
-        </a>
-      </div>
-      <div class="item">
-        <a href="http://indiegamerland.herokuapp.com/">
-          <img src="img/projects/project2.png" alt="Project">
-        </a>
-        <a href="http://indiegamerland.herokuapp.com/" class="btn-light">
-          <i class="fas fa-eye"></i> Project
-        </a>
-        <a href="https://github.com/Sebastiangomezzz/indiegamerland-V3" class="btn-dark">
-          <i class="fab fa-github"></i> Github
-        </a>
-      </div>
-      <div class="item">
-        <a href="https://stars-and-stars.herokuapp.com/">
-          <img src="img/projects/project3.png" alt="Project">
-        </a>
-        <a href="https://stars-and-stars.herokuapp.com/" class="btn-light">
-          <i class="fas fa-eye"></i> Project
-        </a>
-        <a href="https://github.com/Sebastiangomezzz/starsandstars" class="btn-dark">
-          <i class="fab fa-github"></i> Github
-        </a>
-      </div>
-      <!-- <div class="item">
+      <nav class="menu">
+        <div class="menu-branding">
+          <div class="portrait"></div>
+        </div>
+        <ul class="menu-nav">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link"> Home </a>
+          </li>
+          <li class="nav-item">
+            <a href="about.html" class="nav-link"> About Me </a>
+          </li>
+          <li class="nav-item current">
+            <a href="work.html" class="nav-link"> My Work </a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link"> How To Reach Me </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main id="work">
+      <h1 class="lg-heading">
+        My
+        <span class="text-secondary">Work</span>
+      </h1>
+      <h2 class="sm-heading">
+        Check out some of my projects (better with a desktop PC)
+      </h2>
+      <div class="projects">
+        <div class="work-item-1">
+          <a href="https://sebastiangomezzz.github.io/flat-eathling-nightmare/">
+            <img src="img/projects/project1.png" alt="Project" />
+          </a>
+          <a
+            href="https://sebastiangomezzz.github.io/flat-eathling-nightmare/"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Project
+          </a>
+          <a
+            href="https://github.com/Sebastiangomezzz/flat-eathling-nightmare"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+        <div class="item">
+          <a href="http://indiegamerland.herokuapp.com/">
+            <img src="img/projects/project2.png" alt="Project" />
+          </a>
+          <a href="http://indiegamerland.herokuapp.com/" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+          </a>
+          <a
+            href="https://github.com/Sebastiangomezzz/indiegamerland-V3"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+        <div class="item">
+          <a href="https://stars-and-stars.herokuapp.com/">
+            <img src="img/projects/project3.png" alt="Project" />
+          </a>
+          <a href="https://stars-and-stars.herokuapp.com/" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+          </a>
+          <a
+            href="https://github.com/Sebastiangomezzz/starsandstars"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+        <!-- <div class="item">
         <a href="#!">
           <img src="img/projects/project4.jpg" alt="Project">
         </a>
@@ -113,15 +120,12 @@
           <i class="fab fa-github"></i> Github
         </a>
       </div> -->
-    </div>
-    <h2 id='work-flexend-h2'>A lot more coming...</h2>
-  </main>
+      </div>
+      <h2 id="work-flexend-h2">A lot more coming...</h2>
+    </main>
 
-  <footer id="main-footer">
-    Copyright &copy; 2021
-  </footer>
+    <footer id="main-footer">Copyright &copy; 2021</footer>
 
-  <script src="js/main.js"></script>
-</body>
-
+    <script src="js/main.js"></script>
+  </body>
 </html>
